fix(core): 修复批量操作中的安全漏洞和性能问题
- 添加批量条件节点递归深度限制，防止 StackOverflowError
- 修复事务回滚失败时的日志记录问题
- 优化加密转换器的安全性，添加开发盐值警告机制
- 修复嵌套 @Embedded 字段提取的循环引用检测
- 改进 SQL 语句构建中的 NULL 值处理逻辑
- 修复手机、邮箱等敏感信息脱敏方法的 Unicode 支持
- 优化 MERGE 操作的批处理实现和异常处理
- 修复自动配置中的超时设置逻辑
- 添加对 Spring 命名策略的支持
- 修复敏感数据脱敏中的正则表达式匹配问题